# AdventOfCode-2019

./: CMakeLists.txt  README.md
day01/: day01a.cpp  day01b.cpp
day02/: day02a.cpp  day02b.cpp
day03/: day03a.cpp  day03b.cpp
day04/: day04a.cpp  day04b  day04b.cpp  day04b.py
day05/: day05a.cpp  day05b.cpp
day06/: day06a.cpp  day06b.cpp
day07/: day07a.cpp  day07b.cpp
day08/: day08a.cpp  day08b.cpp
day09/: day09a.cpp  day09b.cpp
day10/: day10a.cpp  day10b.cpp
day11/: day11a.cpp  day11a.py  day11b.cpp  day11b.py
day12/: day12a.cpp  day12b.cpp
day13/: day13a.cpp  day13b.cpp
day14/: day14a.cpp  day14b.cpp
day15/: day15a.cpp  day15b.cpp
day16/: day16a.cpp  day16b.cpp
day17/: AlgorithmNotes.md  day17a.cpp  day17b.cpp  solver.py
day18/: AlgorithmNotes.md  day18a.cpp  day18a.py  day18b.cpp  day18b.py
day19/: day19a.cpp  day19b.cpp
day20/: day20a.cpp  day20b.cpp
day21/: combos.py  day21a.cpp  day21b.cpp
day22/: day22a.cpp  day22b.cpp
day23/: day23a.cpp  day23b.cpp
day24/: day24a.cpp  day24b.cpp
day25/: all-combos.txt  item_combinations.py  map.txt  script.txt
intcode/: intcode-assemble.py  intcode-run.cpp  intcode.cpp  intcode.h  intcode.py  tiny-intcode.h
intcode/benchmarks/: README.md  intcode-benchmark.cpp  vil-ackermann-src.txt
