cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(advent-of-code-2019 VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 14)

add_executable(day05a day05/day05a.cpp)
add_executable(day05b day05/day05b.cpp)

add_executable(day06a day06/day06a.cpp)
add_executable(day06b day06/day06b.cpp)

add_executable(day07a day07/day07a.cpp)
add_executable(day07b day07/day07b.cpp)

add_executable(day08a day08/day08a.cpp)
add_executable(day08b day08/day08b.cpp)

add_executable(day09a day09/day09a.cpp)
add_executable(day09b day09/day09b.cpp)
