cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(advent-of-code-2019 VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 14)

include_directories(intcode)

add_executable(day01a day01/day01a.cpp)
add_executable(day01b day01/day01b.cpp)
add_executable(day02a day02/day02a.cpp)
add_executable(day02b day02/day02b.cpp)
add_executable(day03a day03/day03a.cpp)
add_executable(day03b day03/day03b.cpp)
add_executable(day04a day04/day04a.cpp)
add_executable(day04b day04/day04b.cpp)
add_executable(day05a day05/day05a.cpp)
add_executable(day05b day05/day05b.cpp)
add_executable(day06a day06/day06a.cpp)
add_executable(day06b day06/day06b.cpp)
add_executable(day07a day07/day07a.cpp)
add_executable(day07b day07/day07b.cpp)
add_executable(day08a day08/day08a.cpp)
add_executable(day08b day08/day08b.cpp)
add_executable(day09a day09/day09a.cpp)
add_executable(day09b day09/day09b.cpp)
add_executable(day10a day10/day10a.cpp)
add_executable(day10b day10/day10b.cpp)
add_executable(day11a day11/day11a.cpp)
add_executable(day11b day11/day11b.cpp)
add_executable(day12a day12/day12a.cpp)
add_executable(day12b day12/day12b.cpp)
add_executable(day13a day13/day13a.cpp)
add_executable(day13b day13/day13b.cpp)
add_executable(day14a day14/day14a.cpp)
add_executable(day14b day14/day14b.cpp)
add_executable(day15a day15/day15a.cpp)
add_executable(day15b day15/day15b.cpp)
add_executable(day16a day16/day16a.cpp)
add_executable(day16b day16/day16b.cpp)
add_executable(day17a day17/day17a.cpp)
add_executable(day17b day17/day17b.cpp)
add_executable(day18a day18/day18a.cpp)
add_executable(day18b day18/day18b.cpp)
add_executable(day19a day19/day19a.cpp)
add_executable(day19b day19/day19b.cpp)
add_executable(day20a day20/day20a.cpp)
add_executable(day20b day20/day20b.cpp)
